# JMake

./: .gitignore  COMPARISON_ORIGINAL_VS_NEW.md  CONTRIBUTING.md  DATABASE_CLEANUP_SUMMARY.md  DOCUMENTATION_SUMMARY.md  LICENSE  Manifest.toml  Project.toml  README.md  jmake.toml
daemons/: README.md  jmake_auto_complete.jl  jmake_build.jl  job_queue_design.toml  start_all.sh  status.sh  stop_all.sh
design/: FEATURES_ROADMAP.md
docs/: BRIDGE_INTEGRATION.md  BertInteractions.jl  DAEMON_ARCHITECTURE.md  DAEMON_LIFECYCLE.md  DATABASE_STRATEGY.md  ERROR_LEARNING.md  EngineT.jl  FEATURES_ROADMAP.md  Project.toml  README_ERROR_LEARNING.md  SUMMARY.md  SYSIMAGE.md  TEST_AND_DEBUG_SESSION_SUMMARY.md  TEST_RESULTS.md  TEST_SUCCESS_SUMMARY.md  TEST_VALIDATION_REPORT.md  TEngine.jl  UnifiedBridge_Test_Matrix.csv  UnifiedLanguageServer.jl  documenter_setup.md  jmake_api_docs.md  make.jl  package_structure.jl
examples/: README.md  advanced_config.toml  custom_workflow_example.jl  templates.jl  test_error_learning.jl  test_jll_toolchain.jl
examples/cmake_import/: CMakeLists.txt  CMakeLists_simple.txt  README.md  jmake.toml  jmake_simple.toml
examples/cmake_import/src/: demo.cpp  math_functions.cpp  string_utils.cpp
examples/mathlib/: CMakeLists.txt  jmake.toml  jmake_exec.toml
examples/mathlib/include/: matrix.h  statistics.h  vector.h
examples/mathlib/julia/: mathlib_test
examples/mathlib/src/: matrix.cpp  statistics.cpp  vector.cpp
examples/mathlib/tests/: test_main.cpp
scripts/: bootstrap_error_db.jl
src/: ASTWalker.jl  Bridge_LLVM.jl  BuildBridge.jl  JMake.jl  (+13 more)
(+92 files in other folders)
