cmake_minimum_required(VERSION 3.10)
project(MathLib VERSION 1.0.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_library(mathlib SHARED src/vector.cpp src/matrix.cpp src/statistics.cpp)
target_include_directories(mathlib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_compile_options(mathlib PRIVATE -O3 -Wall -Wextra -fPIC)
target_compile_definitions(mathlib PRIVATE MATHLIB_VERSION=1.0.0 ENABLE_SIMD=1)
target_link_libraries(mathlib m pthread)
add_executable(mathlib_test tests/test_main.cpp)
target_link_libraries(mathlib_test mathlib)
